gen/LatinoParser.java
// Generated from /Users/jude/Projects/ANTLR Traductor/ANTLR_Traductor/grammar/Latino.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LatinoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SI=1, ENTONCES=2, SINO=3, FIN=4, REGEX=5, ELEGIR=6, CASO=7, DEFECTO=8, 
		OTRO=9, ROMPER=10, DESDE=11, MIENTRAS=12, PARA=13, EN=14, RANGO=15, REPETIR=16, 
		HASTA=17, IDENTIFICADOR=18, ENTERO=19, REAL=20, CADENA=21, BOOLEANO=22, 
		CONCATENACION=23, MAS=24, MENOS=25, POR=26, DIVIDIR=27, MODULO=28, POTENCIA=29, 
		IGUAL=30, MAS_IGUAL=31, MENOS_IGUAL=32, POR_IGUAL=33, DIVIDIR_IGUAL=34, 
		MODULO_IGUAL=35, Y=36, O=37, IGUALDAD=38, DIFERENTE=39, MENOR=40, MENOR_IGUAL=41, 
		MAYOR=42, MAYOR_IGUAL=43, PUNTO_Y_COMA=44, DOS_PUNTOS=45, COMA=46, PARENIZQ=47, 
		PARENDER=48, LLAVEIZQ=49, LLAVEDER=50, CORCHETEIZQ=51, CORCHETEDER=52, 
		PUNTO=53, ESPACIOS=54, COMENTARIO_BLOQUE=55, COMENTARIO_LINEA=56, VAR=57, 
		ENTERO_TIPO=58, REAL_TIPO=59, CADENA_TIPO=60, BOOLEANO_TIPO=61, FUNCION=62, 
		LEER=63, IMPRIMIR=64, TRY=65, EXCEPT=66, IMPORTAR=67, RETORNO=68, CONTINUAR=69, 
		VERDADERO=70, FALSO=71, CON=72, INCREMENTO=73;
	public static final int
		RULE_programa = 0, RULE_declaracion = 1, RULE_variable_declaracion = 2, 
		RULE_instruccion = 3, RULE_asignacion = 4, RULE_tipo_dato = 5, RULE_expresion = 6, 
		RULE_literal = 7, RULE_lista = 8, RULE_diccionario = 9, RULE_entrada_diccionario = 10, 
		RULE_acceso_lista = 11, RULE_acceso_miembro = 12, RULE_primario = 13, 
		RULE_bin_op = 14, RULE_estructura_control = 15, RULE_if_estructura = 16, 
		RULE_for_estructura = 17, RULE_while_estructura = 18, RULE_switch_estructura = 19, 
		RULE_bloque_casos = 20, RULE_caso = 21, RULE_defecto = 22, RULE_otro = 23, 
		RULE_desde_estructura = 24, RULE_for_rango_estructura = 25, RULE_repetir_estructura = 26, 
		RULE_argumentos_rango = 27, RULE_instruccion_simple = 28, RULE_incremento_decremento = 29, 
		RULE_bloque = 30, RULE_funcion_declaracion = 31, RULE_parametros = 32, 
		RULE_parametro = 33, RULE_llamada_funcion = 34, RULE_llamada_metodo = 35, 
		RULE_argumentos = 36, RULE_retorno = 37, RULE_romper = 38, RULE_continuar = 39, 
		RULE_entrada_salida = 40, RULE_excepcion = 41, RULE_modulo = 42, RULE_fin_de_bloque = 43, 
		RULE_comentario = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracion", "variable_declaracion", "instruccion", "asignacion", 
			"tipo_dato", "expresion", "literal", "lista", "diccionario", "entrada_diccionario", 
			"acceso_lista", "acceso_miembro", "primario", "bin_op", "estructura_control", 
			"if_estructura", "for_estructura", "while_estructura", "switch_estructura", 
			"bloque_casos", "caso", "defecto", "otro", "desde_estructura", "for_rango_estructura", 
			"repetir_estructura", "argumentos_rango", "instruccion_simple", "incremento_decremento", 
			"bloque", "funcion_declaracion", "parametros", "parametro", "llamada_funcion", 
			"llamada_metodo", "argumentos", "retorno", "romper", "continuar", "entrada_salida", 
			"excepcion", "modulo", "fin_de_bloque", "comentario"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'si'", "'entonces'", "'sino'", "'fin'", "'~='", "'elegir'", "'caso'", 
			"'defecto'", "'otro'", "'romper'", "'desde'", "'mientras'", "'para'", 
			"'en'", "'rango'", "'repetir'", "'hasta'", null, null, null, null, null, 
			"'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'='", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'y'", "'o'", "'=='", "'!='", "'<'", "'<='", 
			"'>'", "'>='", "';'", "':'", "','", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "'.'", null, null, null, "'var'", "'entero'", "'real'", "'cadena'", 
			"'booleano'", "'funcion'", "'leer'", "'imprimir'", "'try'", "'except'", 
			"'importar'", "'retorno'", "'continuar'", "'Verdadero'", "'Falso'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SI", "ENTONCES", "SINO", "FIN", "REGEX", "ELEGIR", "CASO", "DEFECTO", 
			"OTRO", "ROMPER", "DESDE", "MIENTRAS", "PARA", "EN", "RANGO", "REPETIR", 
			"HASTA", "IDENTIFICADOR", "ENTERO", "REAL", "CADENA", "BOOLEANO", "CONCATENACION", 
			"MAS", "MENOS", "POR", "DIVIDIR", "MODULO", "POTENCIA", "IGUAL", "MAS_IGUAL", 
			"MENOS_IGUAL", "POR_IGUAL", "DIVIDIR_IGUAL", "MODULO_IGUAL", "Y", "O", 
			"IGUALDAD", "DIFERENTE", "MENOR", "MENOR_IGUAL", "MAYOR", "MAYOR_IGUAL", 
			"PUNTO_Y_COMA", "DOS_PUNTOS", "COMA", "PARENIZQ", "PARENDER", "LLAVEIZQ", 
			"LLAVEDER", "CORCHETEIZQ", "CORCHETEDER", "PUNTO", "ESPACIOS", "COMENTARIO_BLOQUE", 
			"COMENTARIO_LINEA", "VAR", "ENTERO_TIPO", "REAL_TIPO", "CADENA_TIPO", 
			"BOOLEANO_TIPO", "FUNCION", "LEER", "IMPRIMIR", "TRY", "EXCEPT", "IMPORTAR", 
			"RETORNO", "CONTINUAR", "VERDADERO", "FALSO", "CON", "INCREMENTO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Latino.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LatinoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LatinoParser.EOF, 0); }
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinoVisitor ) return ((LatinoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4503599627370152894L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 59L) != 0)) {
				{
				setState(93);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(90);
					declaracion();
					}
					break;
				case 2:
					{
					setState(91);
					instruccion();
					}
					break;
				case 3:
					{
					setState(92);
					comentario();
					}
					break;
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public Variable_declaracionContext variable_declaracion() {
			return getRuleContext(Variable_declaracionContext.class,0);
		}
		public Funcion_declaracionContext funcion_declaracion() {
			return getRuleContext(Funcion_declaracionContext.class,0);
		}
		public Estructura_controlContext estructura_control() {
			return getRuleContext(Estructura_controlContext.class,0);
		}
		public Entrada_salidaContext entrada_salida() {
			return getRuleContext(Entrada_salidaContext.class,0);
		}
		public ExcepcionContext excepcion() {
			return getRuleContext(ExcepcionContext.class,0);
		}
		public ModuloContext modulo() {
			return getRuleContext(ModuloContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinoVisitor ) return ((LatinoVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracion);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				variable_declaracion();
				}
				break;
			case FUNCION:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				funcion_declaracion();
				}
				break;
			case SI:
			case ELEGIR:
			case DESDE:
			case MIENTRAS:
			case PARA:
			case REPETIR:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				estructura_control();
				}
				break;
			case LEER:
			case IMPRIMIR:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				entrada_salida();
				}
				break;
			case TRY:
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				excepcion();
				}
				break;
			case IMPORTAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(105);
				modulo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declaracionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(LatinoParser.IDENTIFICADOR, 0); }
		public TerminalNode IGUAL() { return getToken(LatinoParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Variable_declaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaracion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinoVisitor ) return ((LatinoVisitor<? extends T>)visitor).visitVariable_declaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declaracionContext variable_declaracion() throws RecognitionException {
		Variable_declaracionContext _localctx = new Variable_declaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(IDENTIFICADOR);
			setState(109);
			match(IGUAL);
			setState(110);
			expresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public RomperContext romper() {
			return getRuleContext(RomperContext.class,0);
		}
		public ContinuarContext continuar() {
			return getRuleContext(ContinuarContext.class,0);
		}
		public Desde_estructuraContext desde_estructura() {
			return getRuleContext(Desde_estructuraContext.class,0);
		}
		public While_estructuraContext while_estructura() {
			return getRuleContext(While_estructuraContext.class,0);
		}
		public For_rango_estructuraContext for_rango_estructura() {
			return getRuleContext(For_rango_estructuraContext.class,0);
		}
		public Repetir_estructuraContext repetir_estructura() {
			return getRuleContext(Repetir_estructuraContext.class,0);
		}
		public Estructura_controlContext estructura_control() {
			return getRuleContext(Estructura_controlContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinoVisitor ) return ((LatinoVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruccion);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				asignacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				llamada_funcion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				retorno();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				romper();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				continuar();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(117);
				desde_estructura();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(118);
				while_estructura();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(119);
				for_rango_estructura();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(120);
				repetir_estructura();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(121);
				estructura_control();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(LatinoParser.IDENTIFICADOR, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(LatinoParser.IGUAL, 0); }
		public TerminalNode MAS_IGUAL() { return getToken(LatinoParser.MAS_IGUAL, 0); }
		public TerminalNode MENOS_IGUAL() { return getToken(LatinoParser.MENOS_IGUAL, 0); }
		public TerminalNode POR_IGUAL() { return getToken(LatinoParser.POR_IGUAL, 0); }
		public TerminalNode DIVIDIR_IGUAL() { return getToken(LatinoParser.DIVIDIR_IGUAL, 0); }
		public TerminalNode MODULO_IGUAL() { return getToken(LatinoParser.MODULO_IGUAL, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinoVisitor ) return ((LatinoVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asignacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(IDENTIFICADOR);
			setState(125);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 67645734912L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(126);
			expresion(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_datoContext extends ParserRuleContext {
		public TerminalNode ENTERO_TIPO() { return getToken(LatinoParser.ENTERO_TIPO, 0); }
		public TerminalNode REAL_TIPO() { return getToken(LatinoParser.REAL_TIPO, 0); }
		public TerminalNode CADENA_TIPO() { return getToken(LatinoParser.CADENA_TIPO, 0); }
		public TerminalNode BOOLEANO_TIPO() { return getToken(LatinoParser.BOOLEANO_TIPO, 0); }
		public Tipo_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_dato; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinoVisitor ) return ((LatinoVisitor<? extends T>)visitor).visitTipo_dato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_datoContext tipo_dato() throws RecognitionException {
		Tipo_datoContext _localctx = new Tipo_datoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo_dato);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4323455642275676160L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpresionContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public Llamada_metodoContext llamada_metodo() {
			return getRuleContext(Llamada_metodoContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public DiccionarioContext diccionario() {
			return getRuleContext(DiccionarioContext.class,0);
		}
		public Acceso_listaContext acceso_lista() {
			return getRuleContext(Acceso_listaContext.class,0);
		}
		public Acceso_miembroContext acceso_miembro() {
			return getRuleContext(Acceso_miembroContext.class,0);
		}
		public TerminalNode PARENIZQ() { return getToken(LatinoParser.PARENIZQ, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode PARENDER() { return getToken(LatinoParser.PARENDER, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(LatinoParser.IDENTIFICADOR, 0); }
		public Bin_opContext bin_op() {
			return getRuleContext(Bin_opContext.class,0);
		}
		public TerminalNode CONCATENACION() { return getToken(LatinoParser.CONCATENACION, 0); }
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatinoVisitor ) return ((LatinoVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		return expresion(0);
	}
